[tool.poetry]
name = "random-forest-poetry"
version ="0.1.0"
description = "Predicting the weather"
authors = ["harrshini <harrshinishri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python ="^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
